# Sopes_Proyecto1_G24

./: .gitignore  README.md
API_Python/: app.py
API_Rust/: Cargo.toml
API_Rust/src/: .env  main.rs
Api Replicas/: README.md
Api Replicas/API_Go/: Dockerfile  dockerfile  go.mod  main.go
Api Replicas/API_Python/: Dockerfile  app.py  dockerfile  requirements.txt
Api Replicas/API_Rust/: .gitignore  Cargo.toml
Api Replicas/API_Rust/src/: main.rs
Backend/: proyecto.go
KernelDebian/modulos/CPU/: cpu_Sopes1.c
MF_Go/: main.go
MF_Locust/: locustfile.py  traffic.json
MF_Python/: generated.json  serverPython.py
MF_Python/env/: pyvenv.cfg
MF_Python/env/Scripts/: activate  activate.bat
Modulo Kernel/: hardinfo.c
ModuloDebian/BackEnd/: server.go
ModuloDebian/Modulo Ram/: Makefile  README.md  manual.md  ram-module.c
ModuloDebian/ModuloLP/: Makefile  procesos.c
Node_Client/: package-lock.json  package.json
Node_Client/src/: index.js
Node_Client/src/Controller/: client.controller.js  socket.controller.js
Node_Client/src/Mongo/: database.js
Node_Client/src/MySql/: keys.js
Node_Client/src/Recursos/: Socket.js
Node_Client/src/Routes/: client.router.js
Pub/: pub.go  pubsub.go
react_app/: package-lock.json  package.json  scripts.txt
react_app/public/: index.html
react_app/src/: App.js
react_app/src/Components/: Barras.js  CardPublication.js  DataCard.js  NavVar.js  Pastel.js  Tabla.js
react_app/src/Pages/: Principal.js  Reportes.js
react_app/src/Recursos/: Connection.js  Socket.js
