[package]
name = "API_Rust"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { git = "https://github.com/SergioBenitez/Rocket", features = ["json", "msgpack", "uuid"] }
rocket_codegen = { git = "https://github.com/SergioBenitez/Rocket" }

chrono = "0.4.19"

sqlx = { version = "0.5.7", features = [ "mysql","runtime-async-std-native-tls" ] }
async-std = { version = "1.6", features = [ "attributes" ] }

[dependencies.rocket_contrib]
version = "*"
default-features = false
features = ["json"]